Add fixed position to search bar

--- a/pages/notes.html
+++ b/pages/notes.html
@@ -94,7 +94,7 @@
               <h2>Title</h2>
               <span>Date Created</span>
             </div>
-            <p>this is the content of a note, hi! I'm the first note ever created inside NotiNotes!</p>
+            <p>this is the content of a note, hi! I'm the first note ever created inside NotiNotes!this is the content of a note, hi! I'm the first note ever created inside NotiNotesthis is the content of a note, hi! I'm the first note ever created inside NotiNotes</p>
             <div class="note__bottom flex">
               <ul class="note-tags flex">
                 <li class="note-tag">
@@ -138,7 +138,7 @@
               <h2>Title</h2>
               <span>Date Created</span>
             </div>
-            <p>this is the content of a note, hi! I'm the first note ever created inside NotiNotes!</p>
+            <p>this is the content of a note, hi! I'm the first note ever created inside NotiNotes!this is the content of a note, hi! I'm the first note ever created inside NotiNotesthis is the content of a note, hi! I'm the first note ever created inside NotiNotes</p>
             <div class="note__bottom flex">
               <ul class="note-tags flex">
                 <li class="note-tag">
