Update menu list slide

--- a/pages/login.html
+++ b/pages/login.html
@@ -34,7 +34,7 @@
             </li>
 
             <div class="nav__link">
-              <a href="./login.html" class="button nav__button"> login </a>
+              <a href="./login.html" class="button nav__button hidden"> login </a>
             </div>
           </ul>
 
