--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/about.css">
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/root.css" />
     <link rel="stylesheet" href="../css/navBar.css" />
@@ -48,15 +49,20 @@
       </nav>
     </header>
 
-    <main>
-      <section>
-        <p>
-          This site is being in active development. Expect the first version be
-          released november 5.
-        </p>
-        <p>Authors: Aura Marcela, Mateo Hernandez.</p>
-        <p>version: v1.0.0</p>
-        <p>status: beta</p>
+    <main id="main">
+      <section class="about-section">
+        <div class="about-section__cards">
+          <h1>NotiNotes</h1>
+          <img src="../assets/img/banner.jpg" alt="banner-image">
+        </div>
+        <p>Notinotes is the simplest free aesthetically pleasant open source notes app. It started as a practice for javacript in the year 2022 but it slowly became a real project because of all the additional functionalities it could have.</p>
+        <p><b>Original founder:</b> Mateo Hernandez.</p>
+        <p><b>Backend Developer:</b> Aura Marcela</p>
+        <p>The main idea was to create a notes app for fast access and no need for login, and of course, free, all notes are mainly saved in your local storage.</p>
+        <p>This project does not look for funding but in case you would like to help, we highly appreciate your support!</p>
+        <div class="about-section__link">
+          <a href="./donations.html">Donate</a>
+        </div>
       </section>
     </main>
 
