Fix centered notes

--- a/pages/donations.html
+++ b/pages/donations.html
@@ -20,10 +20,10 @@
             <a href="./notes.html" class="nav__link"> notes </a>
           </li>
           <li class="nav__item">
-            <a href="./pages/" class="nav__link"> bloc </a>
+            <a href="./wall.html" class="nav__link"> the wall </a>
           </li>
           <li class="nav__item">
-            <a href="./pages/" class="nav__link"> open-source </a>
+            <a href="./open.html" class="nav__link"> open-source </a>
           </li>
           <li class="nav__item">
             <a href="./donations.html" class="nav__link"> support </a>
