--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <a href="./pages/notes.html" class="nav__link"> notes </a>
           </li>
           <li class="nav__item">
-            <a href="./pages/" class="nav__link"> bloc </a>
+            <a href="./pages/wall.html" class="nav__link"> the wall </a>
           </li>
           <li class="nav__item">
-            <a href="./pages/" class="nav__link"> open-source </a>
+            <a href="./pages/open.html" class="nav__link"> open-source </a>
           </li>
           <li class="nav__item">
             <a href="./pages/donations.html" class="nav__link"> support </a>
