Add the wall main functionalities

--- a/pages/wall.html
+++ b/pages/wall.html
@@ -70,7 +70,23 @@
           <li class="items-item">
             h6
           </li>
+          <li class="items-item">
+            p
+          </li>
         </ul>
+      </div>
+
+      <!-- Wall Section -->
+      <div class="wall-container">
+
+        <!-- Test -->
+        <h1 style="opacity: .5;">Start adding some content!</h1>
+
+        <!-- <div class="wall-element"> 
+          <h1 contenteditable="true">Title H1</h1>
+          <div contenteditable="false" class="tooltip">-</div>
+        </div> -->
+        
       </div>
     </section>
   </main>
