Update add button and navigation

--- a/pages/login.html
+++ b/pages/login.html
@@ -57,7 +57,7 @@
 
           <h2>NotiNotes</h2>
           <h4 class="js-toggle-text">login</h4>
-          <p>save your personal notes, access anywhere.</p>
+          <p>No need of this. If you'd like to start instantly just go to notes!</p>
 
           <!-- Login Form -->
           <form action="#" class="form--login">
