--- a/pages/notes.html
+++ b/pages/notes.html
@@ -49,10 +49,8 @@
       </nav>
     </header>
 
-    <div class="note__creator-activate">
-      <div class="button-plus nav__button-plus">
-        <img src="../assets/icons/plus-circle.svg" alt="plus-icon" />
-      </div>
+    <div class="note-creator">
+      <img src="../assets/icons/plus-circle.svg" alt="plus-icon"/>
     </div>
 
     <main id="main">
